# crisis-lens

./: README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
crisis_lens/: __init__.py  cli.py  config.py  pipeline.py
crisis_lens/classification/: __init__.py  classifier.py  prompts.py  providers.py
crisis_lens/detection/: __init__.py  anomaly.py  monitors.py  rules.py
crisis_lens/notifications/: __init__.py  dispatcher.py
crisis_lens/reports/: __init__.py  handover.py  sitrep.py
crisis_lens/validation/: __init__.py  golden_set.py  simulation.py
examples/: basic_monitoring.py  golden_set_evaluation.py
tests/: test_classification.py  test_cli.py  test_detection.py  test_notifications.py  test_pipeline.py  test_validation.py
