[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crisis-lens"
version = "0.3.0"
description = "AI-Powered Crisis Detection for Trust & Safety"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Remi Ounadjela", email = "remi@ounadjela.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "types-PyYAML>=6.0",
]
huggingface = [
    "transformers>=4.35",
    "torch>=2.0",
]

[project.scripts]
crisis-lens = "crisis_lens.cli:main"

[project.urls]
Homepage = "https://github.com/RemiOunadjela/crisis-lens"
Repository = "https://github.com/RemiOunadjela/crisis-lens"
Issues = "https://github.com/RemiOunadjela/crisis-lens/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"crisis_lens/classification/prompts.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
